fixed button icon alignment

--- a/app/common/styles/base/buttons.scss
+++ b/app/common/styles/base/buttons.scss
@@ -115,5 +115,6 @@ button, .button, .submit {
     display: inline-block;
     left: 11px;
     top: 5px;
+    line-height: 1;
   }
 }
